started work on a single stock page.

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
     <meta content="black" name="apple-mobile-web-app-status-bar-style"/>
     <meta content="Stacks" name="description"/>
     <meta content="" name="keywords"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.3/js/uikit.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.3/js/uikit-icons.min.js"></script>
     <title>Stacks</title>
   </head>
 
@@ -20,4 +22,5 @@
       <!-- react app entry point -->
       <div id="app"></div>
   </body>
+
 </html>
